[tool.poetry]
name = "python-engeco"
version = "0.1.0"
description = ""
authors = ["rgiglio@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.0"
pandas = "^1.0.5"
joblib = "^0.16.0"
dash = "^1.18.1"
jupyter = "^1.0.0"
notebook = "^6.0.3"
ipykernel = "^5.3.0"
dash-table = "^4.11.0"
dash-bootstrap-components = "^0.10.7"
gunicorn = "^20.0.4"
